[package]
name = "tricli"
version = "0.1.0"
edition = "2021"
authors = ["Dmitrii Vasilev"]
license = "MIT"
repository = "https://github.com/gHashTag/tri"
description = "Unified CLI for trios-server + Tailscale Funnel"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
termcolor = "1.4"
console = "0.15"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json"] }
open = "5.0"
